[package]
name = "tokenlock"
version = "0.3.4"
authors = ["yvt <i@yvt.jp>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/tokenlock"
description = """
Provides cell types that decouple permissions from data.
"""
keywords = ["token", "lock", "cell", "ghost", "borrow"]
categories = ["rust-patterns", "no-std"]
edition = "2018"

[features]
default = ["std"]
std = []
unstable = []

[badges]
maintenance = { status = "passively-maintained" }

[dev-dependencies]
rayon = "1.5.1"
futures = "0.3.17"
tokio = { version = "1.11.0", features = ["rt-multi-thread"] }
async-scoped = { version = "0.7.0", features = ["use-tokio"] }
