[package]
name = "tokenlock"
version = "0.3.5"
authors = ["yvt <i@yvt.jp>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/tokenlock"
description = """
Provides cell types that decouple permissions from data.
"""
keywords = ["token", "lock", "cell", "ghost", "borrow"]
categories = ["rust-patterns", "no-std"]
edition = "2018"

[features]
default = ["std"]
std = ["spin", "alloc"]
alloc = []
unstable = []
doc_cfg = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
spin = { version = "0.9.2", optional = true }

[dev-dependencies]
rayon = "1.5.1"
futures = "0.3.17"
tokio = { version = "1.11.0", features = ["rt-multi-thread"] }
async-scoped = { version = "0.7.0", features = ["use-tokio"] }
log = "0.4"
env_logger = "0.9"

[package.metadata.docs.rs]
all-features = true
